# cpphello

./: CMakeLists.txt  Makefile
source/hello/: CMakeLists.txt
